--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,9 +9,34 @@
   // background-repeat: no-repeat;
   // background-size: cover;
   // background: linear-gradient(to top, rgba(30, 87, 153, 0) 0%, rgba(41, 137, 216, 0) 61%, rgba(254, 215, 184, 1) 21%, rgba(254, 215, 184, 1) 100%);
-  .summer-web {
+  .img-share-web {
+    max-width: 400px;
+    @include responsive(pc) { 
+      max-width: 200px;
+    }
+    @include responsive(phone) { 
+      max-width: 70%;
+    }
+    @include responsive(phone) {
+      max-width: 70%;
+    }
   }
-  .summer-mob {
+  .sometext-1 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-family: $brand-font-family-1;
+    @include responsive(phone) {
+      font-size: 1.2rem;
+      line-height: 1.7rem;
+    }
+  }
+  .sometext-2 {
+    font-size: 1.1rem;
+    line-height: 1.7rem;
+    @include responsive(phone) {
+      font-size: 1.0rem;
+      line-height: 1.5rem;
+    }
   }
   .divider-top-space {
     height: 10px;
@@ -130,13 +155,13 @@
   }
 
   .home-bg {
-    min-height: 220px;
-    max-height: 100%;
+    // min-height: 220px;
+    // max-height: 100%;
     // height: 42vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: column;
 
     // background: linear-gradient(to top, rgba(30, 87, 153, 0) 0%, rgba(41, 137, 216, 0) 56.5%, #fed7b8 21%, #fed7b8 100%);
     //  @include responsive(desktop) {
@@ -145,18 +170,18 @@
     // }
     @include responsive(pc) {
       // background: linear-gradient(to top, rgba(30, 87, 153, 0) 0%, rgba(41, 137, 216, 0) 60%, #fed7b8 21%, #fed7b8 100%);
-      min-height: 190px;
+      // min-height: 190px;
     }
 
     .home-container {
-      margin: 1vh auto 1vh;
+      // margin: 1vh auto 1vh;
       // padding: 2em;
-      text-align: $textalignment;
-      max-width: 500px;
+      // text-align: $textalignment;
+      // max-width: 500px;
 
       @include responsive(desktop) {
         // width: 45%!important;
-        margin: 1vh auto;
+        // margin: 1vh auto;
       }
 
       @include responsive(phone) {
@@ -619,15 +644,15 @@
     }
   }
   .desc {
-    font-size: 1.2rem;
-    line-height: 1.8rem;
+    font-size: 1.1rem;
+    line-height: 1.6rem;
     @include responsive(phone) {
-      font-size: 1.1rem;
-      line-height: 1.6rem;
+      font-size: 1.0rem;
+      line-height: 1.5rem;
     }
   }
   .minimun {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     line-height: 1.5rem;
     @include responsive(phone) {
       font-size: 0.8rem;
