--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,7 +83,7 @@
                     </div>
                   </div>
                 </form>
-                <div class="row mt-3">
+                <div class="row mt-3 mb-5 mb-md-0">
                   <div class="col-12 text-center text-md-left">
                     <div class="minimun">
                       *<a (click)="openModal(terms)" class="footer-tnc-link"
