--- a/src/app/breadcrum/breadcrum.component.html
+++ b/src/app/breadcrum/breadcrum.component.html
@@ -1,31 +1,32 @@
 <div class="breadcrum" *ngIf="breadcrum">
-  <div class="row">
-    <!-- <div class="col-3">
-      <img src="../../assets/img/logo1.png" alt="" class="top-logo">
-    </div> -->
-    <div class="col-12">
-      <div class="status-page z-i5">
-        <!-- <img src="../../assets/img/breadcrum2.png" alt="" class="bred2"> -->
-        <div class="image" [ngClass]="image1active">
-          <div class="image-1"></div>
-          <div class="title">Your Details</div>
-        </div>
-        <div class="borde"></div>
-        <div class="image" [ngClass]="image2active">
-          <div class="image-2"></div>
-          <div class="title">Enter Spend</div>
-        </div>
-        <div class="borde"></div>
-        <div class="image" [ngClass]="image3active">
-          <div class="image-3"></div>
-          <div class="title">Prize Reveal</div>
-          <!-- <-- <div class="image-4"></div>
-              <div class="title">ENTER DRAW</div> -- -->
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <img
+          src="../../assets/img/img-share-web.png"
+          alt=""
+          class="img-fluid share-logo mt-4"
+        />
+      </div>
+      <div class="col-6">
+        <div class="status-page z-i5">
+          <div class="image" [ngClass]="image1active">
+            <div class="image-1"></div>
+            <div class="title">YOUR DETAILS</div>
+          </div>
+          <div class="borde"></div>
+          <div class="image" [ngClass]="image2active">
+            <div class="image-2"></div>
+            <div class="title">SPEND DETAILS</div>
+          </div>
+          <div class="borde"></div>
+          <div class="image" [ngClass]="image3active">
+            <div class="image-3"></div>
+            <div class="title">ENTER DRAW</div>
+          </div>
         </div>
       </div>
+      <div class="col-3"></div>
     </div>
-    <!-- <div class="col-5">
-      <img src="../../assets/img/girl-deep.png" alt="" class="bred3">
-    </div> -->
   </div>
 </div>
