--- a/src/app/thankyou/simple/thankyou-simple.component.html
+++ b/src/app/thankyou/simple/thankyou-simple.component.html
@@ -1,158 +1,82 @@
 <div class="thankyou-page">
-
-  <!-- <section class="container-fluid">
-    <div class="row w100">
-      <div class="col-12">
-        <div class="thankyou-gif">
-          No instant prize this time.
-          <img src="../../assets/img/animations/anim.gif" alt="">
-
-        </div>
-      </div>
-    </div>
-  </section> -->
   <section class="container">
-    <div class="divider-top-space"></div>
     <div class="thankyou-container" [@fadeIn]>
-      <div class="row w100">
-        <div class="col-12">
-          <div class="thankyou-head">
-            <!-- No instant prize this time.-->
-            <!-- <img src="../../assets/img/betterluck1.png" alt="better luck next time"> -->
-            No instant prize this time
-            <!-- Success -->
+      <div class="row d-flex align-items-center">
+        <div class="col-12 col-md-6">
+          <div class="thankyou-head text-center text-md-left">
+            <img src="../../assets/img/gift-win.png" alt="" class="img-fluid" />
           </div>
         </div>
-      </div>
-      <!-- <hr> -->
-      <div class="row w100">
-        <div class="col-12">
-          <div class="thankyou-text-1 text-center">
-            You have been entered into the major draw for the chance to win  $2,000 in Ocean Keys Gift Cards.* 
-            <!-- You have been entered into the daily draw
-            <br>
-            for a chance to win a $500 Gift Card.
-            <br><br>
-            <small>There is one to be won each day.</small> -->
-            <!-- <a (click)="openModal(participat)">participating store</a> -->
+        <div class="col-12 col-md-6">
+          <!-- <div class="row">
+                  <div class="col-12">
+                    <div class="thankyou-text">You have won a {{ prizeInfoName }}.</div>
+                  </div>
+                </div> -->
+          <div class="row mt-4">
+            <div class="col-12">
+              <div class="thankyou-text-2 text-center text-md-left">
+                Thank you for entering our weekly draw to win a $250 Centre Gift
+                Card, your support to Hills Community Aid is greatly
+                appreciated.*
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <!-- <div class="img-wrapper m0 z-i5">
-        <div class="container">
-          <div class="share">
-            <small>Remember, you can enter with every purchase of $10 or more.</small>
-            <img src="../../assets/img/header-image.png" alt="">
+          <div class="row mt-4">
+            <div class="col-12">
+              <div class="thankyou-text-3 text-center text-md-left">
+                Plus, you have been entered into the major draw for a chance to
+                win a $1,000 EFTPOS Gift Card.*
+              </div>
+            </div>
           </div>
-        </div>
-      </div> -->
-      <div class="row">
-        <div class="col-12">
-          <div class="thankyou-text">
-            Remember, you can enter again with a purchase of  $10 or more in any participating retailer at Ocean Keys Shopping Centre.
+          <div class="row mt-4">
+            <div class="col-12">
+              <div class="thankyou-text-4 text-center text-md-left">
+                *<a (click)="openModal(terms)" class="footer-tnc-link"
+                  >Terms and Conditions</a
+                >
+                apply.
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <!-- <div class="row">
-        <div class="col-12">
-          <div><small>Remember, you can enter with every purchase of $50 or more.</small></div>
-        </div>
-      </div> -->
-      <div class="row w100">
-        <div class="col-12 text-center mtb2">
-          <div class="primarybtn btn1" (click)="onDone()">
-            DONE
+          <div class="row mt-4 mb-5">
+            <div class="col-12 text-center text-md-left">
+              <div class="primarybtn btn1" (click)="onDone()">DONE</div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 text-center">
-          <div class="fourthbtn btn" (click)="anotherCode()">
-            ENTER ANOTHER CODE
-          </div>
+          <!-- <div class="row">
+            <div class="col-12 text-center">
+              <div class="fourthbtn btn" (click)="anotherCode()">
+                ENTER ANOTHER SPEND
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
   </section>
-  <!-- <div class="divider-bottom-space"></div> -->
 </div>
-<!-- <div class="row"> -->
-<!-- <div class="col-6 float-right text-right">
-      <img src="../../assets/img/toyota_logo.png" alt="Toyota" class="mw-100">
-    </div>
-    <div class="col-6 float-left text-left">
-      <img src="../../assets/img/logo.png" alt="Westpoint" class="mw-100">
-    </div>
-  </div> -->
-<!-- <div class="ribbon">
-  <div class="container">
+
+<ng-template #terms>
+  <div class="modal-header tc">
     <div class="row">
-      <div class="col-12">
-        <strong>Entries close 5pm, Sunday 16 September 2018.</strong>
+      <div class="col-12 text-center modal-adj-head">
+        <div class="mt-3 mt-md-4">
+          <strong>TERMS AND CONDITIONS </strong>
+        </div>
       </div>
     </div>
-  </div>
-</div> -->
-<ng-template #participat>
-  <div class="modal-header">
-    PARTICIPATING STORES
-    <button type="button" class="close float-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
+    <button
+      type="button"
+      class="close float-right"
+      aria-label="Close"
+      (click)="modalRef.hide()"
+    >
+      <img src="../../assets/img/close-modal.png" class="modal-close" />
     </button>
   </div>
-  <div class="modal-body">
-    Entries available at participating stores within any of the following Vicinity shopping centres.
-    <div class="two-col">
-      <ng-container>
-        <div class="mr-btm">
-          <strong>New South Wales</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='NSW'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>Queensland</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='QLD'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>South Australia</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='SA'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>Tasmania</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='TAS'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>Victoria</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='VIC'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>Western Australia</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='WA'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-      </ng-container>
-    </div>
+  <div class="modal-body tc">
+    <app-terms></app-terms>
   </div>
 </ng-template>
