--- a/src/app/thankyou/simple/thankyou-simple.component.scss
+++ b/src/app/thankyou/simple/thankyou-simple.component.scss
@@ -1,266 +1,54 @@
 // - Regular CSS - Desktop First approach - //
 //variables
-@import '../../../variable.scss';
-
+@import "../../../variable.scss";
 .thankyou-page {
-  margin: 0;
-  // background: url('../../../assets/img/thankyoubg.png') no-repeat;
-  // background-size: cover;
-  // background-position: center;
-  // // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
-  .thankyou-gif {
-    margin: 0 auto;
-    text-align: center;
-
-    img {
-      width: 50vh;
-      margin: 0 auto;
-    }
-  }
-
-  .img-wrapper {
-    position: initial !important;
-    width: 100vw !important;
-    height: 100% !important;
-    // height: 100vh !important;
-    overflow-y: hidden !important;
-    overflow-x: hidden !important;
-    -webkit-overflow-scrolling: touch;
-    display: block;
-
-    // background-image:url('../../../assets/img/middlebg.png'); //linear-gradient( $brand-color-op, $brand-color-op),
-    // background-position: center top;
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // padding: 10px 20px;
-    .share {
-      img {
-        // width: 350px;
-        width: 100%;
-        display: block;
-        margin: 2vh $marginscreenalignment 1vh; //screen center
-        z-index: 1;
-        max-width: 63vh;
-
-        @media (max-width: 1200px) {
-          width: 100%;
-          max-width: 100%;
-        }
-
-        @media (max-width: 576px) {
-          width: 75%;
-        }
-      }
-    }
-  }
-
   .thankyou-container {
-    text-align: center;
-    width: 100%;
-    // height: 630px;
-    // min-height:65vh;
-    margin: 0.5em auto 1em;
-    padding: 1em;
-    letter-spacing: -0.4%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    // background-color: $brand-color;
-    // -webkit-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
-    // -moz-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
-    // box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
-    // border:4px solid white;
-    // color: $brand-color;
-
+    max-width: 850px;
+    margin: 0 auto;
     .thankyou-head {
-      height: auto;
-      text-align: center;
-      margin: 2vh auto;
-      font-size: 40px;
-      line-height: 28px;
-      font-weight: 700;
-
-      // font-family: $brand-font-family1;
-      img {
-        width: 35%;
-      }
     }
-
-    hr {
-      border-top: 2px dotted #000000;
-      margin: 1rem auto;
-      width: 90%;
-      text-align: center;
-    }
-
     .thankyou-text {
-      // width:75%;
-      margin: 5vh auto;
-      line-height: 40px;
-      font-size: 25px;
+      font-size: 2rem;
+      line-height: 2.6rem;
     }
-
     .thankyou-text-1 {
-      width: 100%;
-      margin: 10px auto;
-      line-height: 45px;
-      font-size: 36px;
+      font-size: 1.4em;
+      line-height: 1.9rem;
 
-      img {
-        margin: 0;
-        text-align: left;
+      @include responsive(phone) {
+        line-height: 1.1em;
+        font-size: 1.6em;
       }
     }
-
+    .thankyou-text-2 {
+      font-size: 1.2rem;
+      line-height: 1.7rem;
+      @include responsive(phone) {
+        font-size: 1.1rem;
+        line-height: 1.7rem;
+      }
+    }
+    .thankyou-text-3 {
+      font-size: 1rem;
+      line-height: 1.6rem;
+      @include responsive(phone) {
+        font-size: 0.9rem;
+        line-height: 1.4rem;
+      }
+    }
+    .thankyou-text-4 {
+      font-size: 0.9rem;
+      line-height: 1.5rem;
+      @include responsive(phone) {
+        font-size: 0.8rem;
+        line-height: 1.3rem;
+      }
+    }
     a {
       color: #ffffff;
-
       &:hover {
         color: #ffffff;
       }
-    }
-  }
-}
-
-@media only screen and (max-width: 1200px) {
-  .thankyou-page {
-
-    // min-height:97vh;
-    // height:740px;
-    .thankyou-container {
-      // min-height:66vh;
-      width: 100%;
-    }
-  }
-}
-
-@media only screen and (max-width: 992px) {
-  .thankyou-page {
-    .thankyou-container {
-
-      // margin: 10vh auto;
-      .thankyou-head {
-        margin: 10px auto;
-        font-size: 25px;
-        line-height: 27px;
-        img {
-          width: 50%;
-        }
-      }
-
-      .thankyou-text {
-        width: 100%;
-        margin: 5vh auto;
-        line-height: 28px;
-        font-size: 23px;
-      }
-
-      .thankyou-text-1 {
-        margin: 10px;
-        line-height: 1.5em;
-        font-size: 1.2em;
-      }
-    }
-  }
-}
-
-/* tablet and phone*/
-@media only screen and (max-width: 767px) {
-  .thankyou-page {
-
-    // height:515px;
-    .thankyou-container {
-      margin: 0.2rem auto;
-      padding: 1em 0.5em;
-      width: 90%;
-
-      // min-height: 65vh;
-      // overflow-wrap: break-word;
-      // word-wrap: break-word;
-      .thankyou-head {
-        margin: 10px auto;
-        font-size: 25px;
-        img {
-          width: 40%;
-        }
-      }
-
-      hr {
-        margin: 1em auto;
-      }
-
-      .thankyou-text {
-        // width: 75%;
-        margin: 0.5em auto;
-        line-height: 34px;
-        font-size: 1.2em;
-      }
-
-      .thankyou-text-1 {
-        margin: 1em 1em 0 1em;
-        line-height: 20px;
-        font-size: 1.2em;
-      }
-    }
-  }
-}
-
-/* Extra Small Devices, Phones */
-@media only screen and (max-width: 576px) {
-  .thankyou-page {
-
-    // height:480px;
-    .thankyou-container {
-      margin: 1vh auto;
-      padding: 1vh;
-      width: 100%;
-      height: 100%;
-
-      // min-height: 62vh;
-      .thankyou-head {
-        width: 100%;
-        height: auto;
-        min-height: 30px;
-        text-align: center;
-        margin: 0 auto;
-        font-size: 20px;
-        line-height: 22px;
-        img {
-          width: 60%;
-        }
-      }
-
-      hr {
-        margin: 0.2em auto;
-      }
-
-      .thankyou-text {
-        width: 100%;
-        margin: 5vh auto;
-        font-size: 19px;
-        line-height: 23px;
-      }
-
-      .thankyou-text-1 {
-        margin: 1em auto;
-        font-size: 16px;
-        line-height: 18px;
-      }
-    }
-  }
-}
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width: 320px) {
-  .thankyou-page {
-    .thankyou-container {
-      margin: 0.25em auto;
-      padding: 0.25em;
-      width: 100%;
     }
   }
 }
