--- a/src/app/winner/simple/winner-simple.component.html
+++ b/src/app/winner/simple/winner-simple.component.html
@@ -1,129 +1,82 @@
 <div class="winner-page">
-  <!-- <div class="app-content-wrapper m-0">
-  </div> -->
   <section class="container">
-    <div class="divider-top-space"></div>
-    <div class="winner-container " [@fadeIn]>
-      <div class="row">
-        <div class="col-12">
-          <div class="winner-head">
-            <img src="../../../assets/img/winner.png" alt="you're a winner" class="img-responsive">
+    <div class="winner-container" [@fadeIn]>
+      <div class="row d-flex align-items-center">
+        <div class="col-12 col-md-6">
+          <div class="winner-head text-center text-md-left">
+            <img src="../../assets/img/gift-win.png" alt="" class="img-fluid" />
           </div>
         </div>
-      </div>
-      <!-- <hr> -->
-      <div class="row">
-        <div class="col-12">
-          <div class="winner-text">
-            You have won a {{prizeInfoName}}.
-            <!-- Congratulations, you have won a  -->
+        <div class="col-12 col-md-6">
+          <!-- <div class="row">
+                  <div class="col-12">
+                    <div class="winner-text">You have won a {{ prizeInfoName }}.</div>
+                  </div>
+                </div> -->
+          <div class="row mt-4">
+            <div class="col-12">
+              <div class="winner-text-2 text-center text-md-left">
+                Thank you for entering our weekly draw to win a $250 Centre Gift
+                Card, your support to Hills Community Aid is greatly
+                appreciated.*
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <!-- <hr> -->
-      <div class="row">
-        <div class="col-12">
-          <div class="winner-text-1">
-            Plus, you have been entered into the draw for a chance to win $1,000.*
+          <div class="row mt-4">
+            <div class="col-12">
+              <div class="winner-text-3 text-center text-md-left">
+                Plus, you have been entered into the major draw for a chance to
+                win a $1,000 EFTPOS Gift Card.*
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="winner-text-2">
-            Please take your ID to claim your prize from the concierge desk located on the ground floor, 264
-            George Street, Sydney CBD, Monday – Friday between the hours of 10am – 4pm.
-            <!-- <a (click)="openModal(participat)">participating store</a> for more chances to win!-->
+          <div class="row mt-4">
+            <div class="col-12">
+              <div class="winner-text-4 text-center text-md-left">
+                *<a (click)="openModal(terms)" class="footer-tnc-link"
+                  >Terms and Conditions</a
+                >
+                apply.
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 text-center">
-          <div class="secondarybtn btn1" (click)="onDone()">
-            DONE
+          <div class="row mt-4 mb-5">
+            <div class="col-12 text-center text-md-left">
+              <div class="primarybtn btn1" (click)="onDone()">DONE</div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 text-center">
-          <div class="fourthbtn btn" (click)="anotherCode()">
-            ENTER ANOTHER SPEND
-          </div>
+          <!-- <div class="row">
+            <div class="col-12 text-center">
+              <div class="fourthbtn btn" (click)="anotherCode()">
+                ENTER ANOTHER SPEND
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
   </section>
-  <!-- <div class="divider-bottom-space"></div> -->
 </div>
-<!-- <div class="ribbon">
-  <div class="container">
+
+<ng-template #terms>
+  <div class="modal-header tc">
     <div class="row">
-      <div class="col-12">
-        <strong>Entries close 5pm, Sunday 16 September 2018.</strong>
+      <div class="col-12 text-center modal-adj-head">
+        <div class="mt-3 mt-md-4">
+          <strong>TERMS AND CONDITIONS </strong>
+        </div>
       </div>
     </div>
-  </div>
-</div> -->
-<ng-template #participat>
-  <div class="modal-header">
-    PARTICIPATING STORES
-    <button type="button" class="close float-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
+    <button
+      type="button"
+      class="close float-right"
+      aria-label="Close"
+      (click)="modalRef.hide()"
+    >
+      <img src="../../assets/img/close-modal.png" class="modal-close" />
     </button>
   </div>
-  <div class="modal-body">
-    Entries available at participating stores within any of the following Vicinity shopping centres.
-    <div class="two-col">
-      <ng-container>
-        <div class="mr-btm">
-          <strong>New South Wales</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='NSW'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>Queensland</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='QLD'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>South Australia</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='SA'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>Tasmania</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='TAS'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>Victoria</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='VIC'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-        <div class="mr-btm">
-          <strong>Western Australia</strong>
-          <div *ngFor="let Lscenters of this.campaignCenterService.centers">
-            <a href="{{Lscenters.website}}" target="_blank">
-              <div *ngIf="Lscenters.state==='WA'">{{Lscenters.name}}</div>
-            </a>
-          </div>
-        </div>
-      </ng-container>
-    </div>
+  <div class="modal-body tc">
+    <app-terms></app-terms>
   </div>
 </ng-template>
