--- a/src/app/winner/simple/winner-simple.component.scss
+++ b/src/app/winner/simple/winner-simple.component.scss
@@ -1,200 +1,54 @@
 // - Regular CSS - Desktop First approach - //
 //variables
-@import '../../../variable.scss';
-.winner-page{
-  height: 850px;
-  // background: url('../../assets/img/background.jpg');
+@import "../../../variable.scss";
+.winner-page {
   .winner-container {
-    text-align: center;
-    width: 805px;
-    height: 700px;
-    // min-height:65vh;
-    margin: 0.5em auto 1em;
-    padding: 1em;
-    letter-spacing: -0.4%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    // background-color: $brand-color;
-    // -webkit-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
-    // -moz-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
-    // box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
-    // border:4px solid white;
-    // color:$brand-color-1;
+    max-width: 850px;
+    margin: 0 auto;
     .winner-head {
-      height: auto;
-      text-align: center;
-      margin: 0 auto 2rem;
-      font-size: 5vw;
-      line-height: 5vw;
-      // font-family: $brand-font-family1;
-      img{
-        width:75%;
-      }
-    }
-    hr{
-      border-top: 2px dotted #000000;
-      margin:1rem auto;
-      width:80%;
-      text-align: center;
     }
     .winner-text {
-      // width:75%;
-      margin: 2rem auto;
-      line-height: 34px;
-      font-size: 2em;
-      // font-style: italic;
-      // font-family: $brand-font-family1;
+      font-size: 2rem;
+      line-height: 2.6rem;
     }
-
     .winner-text-1 {
-      margin: 1rem auto;
-      line-height: 1.6em;
       font-size: 1.4em;
-      // @media only screen and (max-width: 767px) { 
-      //   line-height: 1.6em;
-      //   font-size: 1.4em; }
-      @include responsive (phone) {
-        line-height: 1.6em;
-          font-size: 1.4em;
+      line-height: 1.9rem;
+
+      @include responsive(phone) {
+        line-height: 1.1em;
+        font-size: 1.6em;
       }
- 
     }
     .winner-text-2 {
-      font-size: 1em;
-      line-height: 1.4em;
-      margin: 1rem auto;
+      font-size: 1.2rem;
+      line-height: 1.7rem;
+      @include responsive(phone) {
+        font-size: 1.1rem;
+        line-height: 1.7rem;
+      }
+    }
+    .winner-text-3 {
+      font-size: 1rem;
+      line-height: 1.6rem;
+      @include responsive(phone) {
+        font-size: 0.9rem;
+        line-height: 1.4rem;
+      }
+    }
+    .winner-text-4 {
+      font-size: 0.9rem;
+      line-height: 1.5rem;
+      @include responsive(phone) {
+        font-size: 0.8rem;
+        line-height: 1.3rem;
+      }
     }
     a {
       color: #ffffff;
-
       &:hover {
         color: #ffffff;
       }
     }
   }
 }
-
-@media only screen and (max-width: 1200px) {
-  .winner-page{
-    // min-height:97vh;
-    height:740px;
-    .winner-container {
-      // min-height:66vh;
-      width:90%;
-    }
-  }
-}
-@media only screen and (max-width: 992px) {
-  .winner-page{
-    .winner-container {
-      // margin: 1em auto 1em;
-
-      .winner-head {
-        margin: 10px auto;
-        font-size: 5vw;
-        line-height:4vw;
-      }
-      hr{
-        margin:0.5rem auto;
-      }
-      .winner-text {
-        width:75%;
-        line-height: 30px;
-        font-size: 27px;
-      }
-    }
-  }
-}
-
-/* tablet and phone*/
-@media only screen and (max-width: 767px) {
-  .winner-page{
-    height:605px;
-    .winner-container {
-      margin: 0.2em auto 1em;
-      padding: 1em 0.5em;
-      width: 90%;
-      height:600px;
-      // min-height: 65vh;
-      // overflow-wrap: break-word;
-      // word-wrap: break-word;
-
-      .winner-head {
-        margin: 10px auto;
-        font-size: 7vw;
-        line-height: 7vw;
-      }
-      hr{
-        margin:0.25rem auto;
-      }
-      .winner-text {
-        width:75%;
-        margin: 0.25rem auto;
-        line-height: 30px;
-        font-size: 27px;
-      }
-      .winner-text-1 {
-        margin: 1em 1em 0 1em;
-      }
-    }
-  }
-}
-
-
-/* Extra Small Devices, Phones */
-@media only screen and (max-width: 576px) {
-  .winner-page{
-    height:480px;
-    .winner-container {
-      margin: 0.4rem auto;
-      padding: 0.4em;
-      width: 100%;
-      height:100%;
-      // min-height: 62vh;
-      .winner-head {
-        width: 100%;
-        height: auto;
-        min-height: 40px;
-        text-align: center;
-        margin: 2vh auto;//screen center
-        font-size:1.8em;
-        img{
-          width:90%;
-        }
-      }
-      hr{
-        margin:0.2em auto;
-      }
-      .winner-text {
-        width:90%;
-        margin: 1vh auto;
-        font-size:20px;
-        line-height: 25px;
-      }
-      .winner-text-1 {
-        margin: 0.5rem auto;
-        font-size:18px;
-        line-height: 22px;
-      }
-      .winner-text-2 {
-        margin: 0.5rem auto;
-        font-size:14px;
-        line-height: 17px;
-      }
-    }
-  }
-}
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width: 320px) {
-  .winner-page{
-    .winner-container {
-      margin: 0.4em auto;
-      padding: 0.25em;
-      width: 100%;
-    }
-  }
-}
-
