--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,12 +12,9 @@
 
 <section class="footer" *ngIf="this.campaignCenterService.showFooter">
   <div class="container">
-    <div class="row text-center p-2 p-md-3 d-flex align-items-center">
+    <div class="row text-center p-2 pNO-md-3 d-flex align-items-center">
       <div class="col-8 col-md-6">
-        <img
-          src="./assets/img/kellyville-footer.png"
-          class="img-fluid footer-logo-1"
-        />
+        <img src="./assets/img/kellyville-footer.png" class="imgNO-fluid footer-logo-1" height="50" />
       </div>
       <div class="col-4 col-md-6">
         <!-- Entries close 11:59pm Friday 24th December.
@@ -25,7 +22,7 @@
         >*Terms & Conditions</a
       >
       apply. -->
-        <img src="./assets/img/ispt-logo.png" class="img-fluid footer-logo-2" />
+        <img src="./assets/img/ispt-logo.png" class="imgNO-fluid footer-logo-2" height="50" />
       </div>
     </div>
   </div>
