--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -40,7 +40,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <div class="plus text-center my-5 mb-md-5 mt-md-0">
+          <div class="plus text-center mt-5 myNO-5 mb-md-5 mt-md-0">
             Just a few more details.
           </div>
         </div>
@@ -613,9 +613,9 @@
       </div>
     </div>
     <div class="register-container z-i5" *ngIf="showConfirmDetails">
-      <div class="row my-4 my-md-5">
-        <div class="col-12 plus text-center">
-          <div>Let's confirm your details.</div>
+      <div class="row">
+        <div class="col-12">
+          <div class="plus text-center my-5 mb-md-5 mt-md-0">Let's confirm your details.</div>
           <!-- <img src="../../assets/img/reghead2.png" alt="Let's confirm your details."> -->
         </div>
       </div>
@@ -733,7 +733,8 @@
                 [ngClass]="loadingStyle"
               />
               <!-- <span class="loading" [ngClass]="loadingStyle"></span> -->
-              YES, CORRECT
+              <!-- YES, CORRECT -->
+              NEXT
             </button>
           </div>
           <div class="col-12 textalignment">
