--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -19,7 +19,8 @@
   }
 
   .register-container {
-    margin: 0.3em auto 1vh;
+    // margin: 0.3em auto 1vh;
+    margin: -20px auto 1vh;
     // padding: 2em 2em 0; //
     max-width: 550px;
     // min-height: 76vh;
