--- a/src/app/thankyou/simple/thankyou-simple.component.html
+++ b/src/app/thankyou/simple/thankyou-simple.component.html
@@ -6,11 +6,7 @@
           <div class="col-12">
             <img src="{{ src }}" alt="Cookies" class="img-fluid" />
             <div class="text-center mb-5">
-              <div
-                class="primarybtn btn"
-                (click)="opengift()"
-                [ngClass]="boxStyleBtn"
-              >
+              <div class="primarybtn btn" (click)="opengift()">
                 OPEN TO SEE IF YOU ARE A WINNER
               </div>
             </div>
@@ -40,7 +36,7 @@
                 <div class="thankyou-text-2 text-center text-md-left">
                   Thank you for entering our weekly draw to win a $250 Centre
                   Gift Card, your support to Hills Community Aid is greatly
-                  appreciated.* 
+                  appreciated.*
                 </div>
               </div>
             </div>
