--- a/src/app/winner/simple/winner-simple.component.html
+++ b/src/app/winner/simple/winner-simple.component.html
@@ -6,11 +6,7 @@
           <div class="col-12">
             <img src="{{ src }}" alt="Cookies" class="img-fluid" />
             <div class="text-center mb-5">
-              <div
-                class="primarybtn btn"
-                (click)="opengift()"
-                [ngClass]="boxStyleBtn"
-              >
+              <div class="primarybtn btn" (click)="opengift()">
                 OPEN TO SEE IF YOU ARE A WINNER
               </div>
             </div>
