update register & services

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -544,7 +544,81 @@
                       of entry. I agree to subscribe to the Kellyville Village
                       database and receive our latest news and updates. You may
                       unsubscribe at any time.
-                      <a href="" target="_blank" class="footer-tnc-link"
+                      <a
+                        *ngIf="companyId == 1315"
+                        href="https://winmaleevillage.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1321"
+                        href="https://kellyvillevillage.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1319"
+                        href="https://shopattheponds.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1313"
+                        href="https://katoombavillage.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1320"
+                        href="https://deewhygrand.com/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1316"
+                        href="https://kincumbershoppingvillage.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1312"
+                        href="https://northlakesshoppingcentre.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1310"
+                        href="https://fletchervillage.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 158"
+                        href="https://warnersbayvillage.com/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1322"
+                        href="https://gungahlinvillage.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
+                        >Click here</a
+                      >
+                      <a
+                        *ngIf="companyId == 1468"
+                        href="https://19thavenueshopping.com.au/privacy-policy/"
+                        target="_blank"
+                        class="footer-tnc-link"
                         >Click here</a
                       >
                       to view our privacy policy.
@@ -615,7 +689,9 @@
     <div class="register-container z-i5" *ngIf="showConfirmDetails">
       <div class="row">
         <div class="col-12">
-          <div class="plus text-center my-5 mb-md-5 mt-md-0">Let's confirm your details.</div>
+          <div class="plus text-center my-5 mb-md-5 mt-md-0">
+            Let's confirm your details.
+          </div>
           <!-- <img src="../../assets/img/reghead2.png" alt="Let's confirm your details."> -->
         </div>
       </div>
@@ -805,9 +881,12 @@
     <div class="row">
       <div class="col-12 text-center modal-adj-head">
         <div class="mt-3 mt-md-4">
-          <strong
-            >TERMS AND CONDITIONS FOR “24 DAYS OF MERRY MOMENTS” PROMOTION
-          </strong>
+          <div>
+            <strong>Terms and Conditions</strong>
+          </div>
+          <div class="mt-2">
+            <strong>‘Share the Merry’</strong>
+          </div>
         </div>
       </div>
     </div>
