--- a/src/app/winner/simple/winner-simple.component.html
+++ b/src/app/winner/simple/winner-simple.component.html
@@ -82,7 +82,12 @@
     <div class="row">
       <div class="col-12 text-center modal-adj-head">
         <div class="mt-3 mt-md-4">
-          <strong>TERMS AND CONDITIONS </strong>
+          <div>
+            <strong>Terms and Conditions</strong>
+          </div>
+          <div class="mt-2">
+            <strong>‘Share the Merry’</strong>
+          </div>
         </div>
       </div>
     </div>
